--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -34,6 +34,23 @@
                 "BOP_PATH": "/home/tatiana/chris-sem-prj/ETH-Semester-Project/bop_datasets",
                 "PYTHONPATH": "${workspaceFolder}/scripts:${workspaceFolder}/external/bop_toolkit:${workspaceFolder}/external/dinov2:${workspaceFolder}/external/crocov2:${env:PYTHONPATH}"
             }
+        },
+        {
+            "name": "Python Debugger: testcrocoinfer",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "scripts/testcrocoinfer.py",
+            "console": "integratedTerminal",
+            "args": [
+                "--opts-path",
+                "configs/infer/lmo_crocov2.json"
+            ],
+            "python": "/home/tatiana/anaconda3/envs/foundpose_gpu/bin/python",
+            "env":{
+                "REPO_PATH": "/home/tatiana/chris-sem-prj/ETH-Semester-Project",
+                "BOP_PATH": "/home/tatiana/chris-sem-prj/ETH-Semester-Project/bop_datasets",
+                "PYTHONPATH": "${workspaceFolder}/scripts:${workspaceFolder}/external/bop_toolkit:${workspaceFolder}/external/dinov2:${workspaceFolder}/external/crocov2:${env:PYTHONPATH}"
+            }
         }
     ]
 }
