minor changes for getting all shapes of all blocks for both croco and dino

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -26,7 +26,7 @@
             "console": "integratedTerminal",
             "args": [
                 "--opts-path",
-                "configs/infer/lmo_crocov2.json"
+                "configs/infer/lmo.json"
             ],
             "python": "/home/tatiana/anaconda3/envs/foundpose_gpu/bin/python",
             "env":{
@@ -51,6 +51,6 @@
                 "BOP_PATH": "/home/tatiana/chris-sem-prj/ETH-Semester-Project/bop_datasets",
                 "PYTHONPATH": "${workspaceFolder}/scripts:${workspaceFolder}/external/bop_toolkit:${workspaceFolder}/external/dinov2:${workspaceFolder}/external/crocov2:${env:PYTHONPATH}"
             }
-        }
+        },
     ]
 }
