gathered additional results for trying to improve croco

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -26,7 +26,7 @@
             "console": "integratedTerminal",
             "args": [
                 "--opts-path",
-                "configs/infer/lmo.json"
+                "configs/infer/lmo_crocov2.json"
             ],
             "python": "/home/tatiana/anaconda3/envs/foundpose_gpu/bin/python",
             "env":{
